# vani

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  ONBOARDING.md  README.md  STATUS.md  TODO.md
docs/: namespaces_design.md
examples/: anon_fn.vani  array_proofs.intent  array_proofs.vani  array_return.vani  arrays.intent  arrays.vani  assert_messages.vani  atomics.vani  basics.intent  basics.vani  binary_heap.vani  block_expressions.intent  block_expressions.vani  bloom_filter.vani  borrows.vani  bounded_generics.intent  bounded_generics.vani  bounds_elision.vani  bst.vani  bst_avl.vani  btreemap.vani  btreeset.vani  closures.vani  composite_types.vani  concurrency.intent  concurrency.vani  condvar.vani  container_method_sugar.vani  contracts.intent  contracts.vani  control_flow.vani  deque.vani  drop_interface.intent  drop_interface.vani  dyn_dispatch.vani  early_exit.intent  early_exit.vani  enum_arr_payload.vani  enum_eq.vani  enum_owned_payload.intent  (+82 more)
memory/: MEMORY.md  feedback_vani_design_philosophy.md  feedback_vani_file_access.md  feedback_vani_language_design.md  project_vani_affine_standing.md  project_vani_async_design.md  project_vani_backend.md  project_vani_condvar_design.md  project_vani_container_affine_contract.md  project_vani_data_structures_roadmap.md  project_vani_embedded_position.md  project_vani_status_file.md  user_embedded_background.md
src/: ast.rs  backend.rs  backend_c.rs  backend_llvm.rs  checker.rs  diagnostic.rs  format.rs  ir.rs  lexer.rs  lib.rs  lsp.rs  main.rs  manifest.rs  parser.rs  smt.rs  span.rs  ssa.rs  ssa_backend_c.rs  (+2 more)
(+6 files in other folders)
